# unscheduler

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  sample_schedule.txt  schedule.txt
tests/: test_parser.py
unscheduler/: cli.py  constants.py  parser.py  stats.py  tui.css  tui.py  unscheduler.py  visualizer.py
